<resources>
    <string name="app_name">Quadratic Equation</string>
    <string name="str_v_description">Enter the coefficients A B C\nIf A=0, the equation is not quadratic.</string>
    <string name="str_v_a">A</string>
    <string name="str_v_b">B</string>
    <string name="str_v_c">C</string>
    <string name="str_v_reason">Reason</string>
    <string name="str_sol">Solution</string>
    <string name="str_v_round">Round</string>
    <string name="str_v_solve">Solution</string>
    <string name="str_coefficient">Please enter value for coefficient A. If A=0, the equation is not quadratic!!.</string>
    <string name="str_two_solution">There are two solution because the discriminant is greater than Zero.</string>
    <string name="str_one_solution">There is only one solution because the discriminant is equal to Zero.</string>
    <string name="str_no_solution">Complex (imaginary) roots!!. There is no real solution because the discriminant is less than Zero.</string>
    <string name="str_x">X=</string>
    <string name="str_enter_cofficient">Please enter value for coefficient A, B and C.</string>
    <string name="str_positive_equal">X ( + )  = </string>
    <string name="str_negative_equal">X ( - )  = </string>
    <string name="str_clear">Clear</string>
    <string name="action_about">About the Quadratic Equation</string>
    <string name="text_formula">Formula</string>
    <string name="rate_app">Rate App</string>
    <string name="privacy_policy">Privacy Policy</string>

    <!--AdMob-->
    <string name="ADMOB_APP_ID">ca-app-pub-1885749404874590~5960525662</string>
    <string name="ad_unit_main_activity">ca-app-pub-1885749404874590/6878855663</string>
    <string name="ad_unit_test">ca-app-pub-3940256099942544/6300978111</string>
    <!--AdMob-->

</resources>
